fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -269,11 +269,11 @@ p {
 }
 
 /* Content */
-.content {
+/* .content {
   background-color: white;
   padding-bottom: 10px;
   margin: 5px;
-}
+} */
 
 @media screen and (max-width: 1300px) {
   .column {
