--- a/garden/garden.css
+++ b/garden/garden.css
@@ -22,7 +22,7 @@ img {
 
 .image {
   display: block;
-  width: 255px;
+  width: 260px;
 }
 
 .overlay {
@@ -67,6 +67,8 @@ img {
   width: auto;
   min-width: 225px;
   min-height: 200px;
+  margin: 10px 10px 10px 10px;
+  /* margin: 20px 20px 20px 20px; */
   /* z-index: 1; */
 }
 
@@ -83,6 +85,7 @@ img {
   min-width: 225px;
   min-height: 220px;
   padding: 20px 20px 20px 20px;
+  margin: 10px 10px 10px 10px;
   z-index: 1;
 }
 
@@ -118,6 +121,7 @@ g2 {
   width: auto;
   min-width: 225px;
   padding: 20px 20px 20px 20px;
+  margin: 10px 10px 10px 10px;
   z-index: 1;
 }
 
@@ -139,4 +143,12 @@ g2 {
 
 .grid-item {
   width: 225px;
+}
+
+.garden-portfolio {
+  margin-left: 285px; /* Same as the width of the sidebar */
+  padding-top: 45px;
+  font-family: "Noto Serif SC", serif;
+  color: #000000;
+  margin-right: 15%;
 }
